@@ -13,6 +13,7 @@ import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 
 import org.apache.log4j.Logger;
@@ -49,11 +50,14 @@ public class LaucherJUnitProcess {
 	boolean outputInFile = ConfigurationProperties.getPropertyBool("processoutputinfile");
 
 	public TestResult execute(String jvmPath, String classpath, List<String> classesToExecute, int waitTime) {
+		String envOS = System.getProperty("os.name");
+		String timeZone = ConfigurationProperties.getProperty("timezone");
+
 		Process p = null;
-		jvmPath += File.separator + "java";
+		UUID procWinUUID = null;
 
+		String newJvmPath = jvmPath + File.separator + "java";
 		List<String> cls = new ArrayList<>(new HashSet(classesToExecute));
-
 		String newClasspath = classpath;
 		if (ConfigurationProperties.getPropertyBool("runjava7code") || ProjectConfiguration.isJDKLowerThan8()) {
 			newClasspath = (new File(ConfigurationProperties.getProperty("executorjar")).getAbsolutePath())
@@ -67,7 +71,7 @@ public class LaucherJUnitProcess {
 
 			List<String> command = new ArrayList<String>();
 
-			command.add(jvmPath);
+			command.add("\"" + newJvmPath + "\"");
 			command.add("-Xmx2048m");
 
 			String[] ids = ConfigurationProperties.getProperty(MetaGenerator.METALL).split(File.pathSeparator);
@@ -75,15 +79,28 @@ public class LaucherJUnitProcess {
 				command.add("-D" + MetaGenerator.MUT_IDENTIFIER + mutid + "="
 						+ ConfigurationProperties.getProperty(MetaGenerator.MUT_IDENTIFIER + mutid));
 			}
+			if (envOS.contains("Windows")) {
+				procWinUUID = UUID.randomUUID();
+				command.add("-DwinProcUUID=" + procWinUUID);
+				System.setProperty("user.timezone", timeZone);
+			}
 
 			command.add("-cp");
-			command.add(newClasspath);
+			command.add("\"" + newClasspath + "\"");
 			command.add(laucherClassName().getCanonicalName());
 			command.addAll(cls);
 
-			printCommandToExecute(command, waitTime);
-
-			ProcessBuilder pb = new ProcessBuilder("/bin/bash");
+			ProcessBuilder pb;
+			if (!envOS.contains("Windows")) {
+				printCommandToExecute(command, waitTime);
+				pb = new ProcessBuilder("/bin/bash");
+			} else {
+				command.set(0, "'" + newJvmPath + "'");
+				command.set(5, "'" + newClasspath + "'");
+				// On Windows, BufferedWriter have a problem to write over 8192 characters.
+				// We must provide command in ProcessBuilder constructor.
+				pb = new ProcessBuilder("powershell", "-Command", "& " + toString(command));
+			}
 
 			if (outputInFile) {
 				pb.redirectOutput(ftemp);
@@ -97,22 +114,23 @@ public class LaucherJUnitProcess {
 			BufferedWriter p_stdin = new BufferedWriter(new OutputStreamWriter(p.getOutputStream()));
 
 			try {
-				// Set up the timezone
-				String timeZone = ConfigurationProperties.getProperty("timezone");
-				p_stdin.write("TZ=\"" + timeZone + "\"");
-				p_stdin.newLine();
-				p_stdin.flush();
-				p_stdin.write("export TZ");
-				p_stdin.newLine();
-				p_stdin.flush();
-				p_stdin.write("echo $TZ");
-				p_stdin.newLine();
-				p_stdin.flush();
-				// Writing the command
-				p_stdin.write(toString(command));
+				if (!envOS.contains("Windows")) {
+					// Set up the timezone
+					p_stdin.write("TZ=\"" + timeZone + "\"");
+					p_stdin.newLine();
+					p_stdin.flush();
+					p_stdin.write("export TZ");
+					p_stdin.newLine();
+					p_stdin.flush();
+					p_stdin.write("echo $TZ");
+					p_stdin.newLine();
+					p_stdin.flush();
+					// Writing the command
+					p_stdin.write(toString(command));
 
-				p_stdin.newLine();
-				p_stdin.flush();
+					p_stdin.newLine();
+					p_stdin.flush();
+				}
 
 				// end
 				p_stdin.write("exit");
@@ -125,13 +143,12 @@ public class LaucherJUnitProcess {
 
 			//
 			if (!p.waitFor(waitTime, TimeUnit.MILLISECONDS)) {
-				killProcess(p, waitTime);
+				killProcess(p, waitTime, procWinUUID);
 
 				return null;
 			}
 			long t_end = System.currentTimeMillis();
-			// log.debug("Execution time " + ((t_end - t_start) / 1000) + "
-			// seconds");
+			log.debug("Execution time " + ((t_end - t_start) / 1000) + "seconds");
 
 			if (!avoidInterruption) {
 				// We force obtaining the exit value.
@@ -143,12 +160,13 @@ public class LaucherJUnitProcess {
 				output = new BufferedReader(new FileReader(ftemp.getAbsolutePath()));
 			else
 				output = new BufferedReader(new InputStreamReader(p.getInputStream()));
+
 			TestResult tr = getTestResult(output);
 			p.destroyForcibly();
 			return tr;
 		} catch (IOException | InterruptedException | IllegalThreadStateException ex) {
 			log.info("The Process that runs JUnit test cases had problems: " + ex.getMessage());
-			killProcess(p, waitTime);
+			killProcess(p, waitTime, procWinUUID);
 		}
 		return null;
 	}
@@ -159,41 +177,62 @@ public class LaucherJUnitProcess {
 	 * 
 	 * @param waitTime
 	 */
-	private void killProcess(Process p, int waitTime) {
+	private void killProcess(Process p, int waitTime, UUID procWinUUID) {
 		if (p == null)
 			return;
 
 		Object pid = null;
 		try {
-			Field f = p.getClass().getDeclaredField("pid");
-			f.setAccessible(true);
-			pid = f.get(p);
-			log.debug("-Killed id: pid->" + pid);
-
-		} catch (Exception e) {
+			if (procWinUUID != null) {
+				Process survivedPID = Runtime.getRuntime()
+						.exec("wmic process where \"commandline like '%-DwinProcUUID=" + procWinUUID
+								+ "%' and name like '%java.exe%'\" get processid");
+				BufferedReader outputSurvivedPIDs = new BufferedReader(
+						new InputStreamReader(survivedPID.getInputStream()));
+				String line;
+				int i = 0;
+				while ((line = outputSurvivedPIDs.readLine()) != null) {
+					if (i == 2 && !line.isEmpty()) {
+						pid = line.trim();
+						break;
+					}
+					i++;
+				} 
+			} else {
+				Field f = p.getClass().getDeclaredField("pid");
+				f.setAccessible(true);
+				pid = f.get(p);
+			}
+		} catch (IOException | NoSuchFieldException | SecurityException | IllegalArgumentException | IllegalAccessException e) {
 			log.error(e);
 		}
-		p.destroyForcibly();
 
+		p.destroyForcibly();
 		log.info("The Process that runs JUnit test cases did not terminate within waitTime of "
 				+ TimeUnit.MILLISECONDS.toSeconds(waitTime) + " seconds");
-		log.info("Killed the Process that runs JUnit test cases " + pid);
+		log.info("Killing the Process that runs JUnit test cases " + pid);
 
 		// workarrond!!
 		if (ConfigurationProperties.getPropertyBool("forcesubprocesskilling")) {
 			Integer subprocessid = Integer.valueOf(pid.toString()) + 1;
 			try {
-				log.debug("Killing subprocess " + subprocessid);
-				Process process = new ProcessBuilder(new String[] { "kill", subprocessid.toString() }).start();
+				Process process;
+				if (procWinUUID != null) {
+					log.error("Killing Windows process " + pid);
+					process = Runtime.getRuntime().exec("taskkill /T /F /PID " + pid);
+				} else {
+					log.debug("Killing subprocess " + subprocessid);
+					process = new ProcessBuilder(new String[] { "kill", subprocessid.toString() }).start();
+				}
 				process.waitFor();
-
-			} catch (Exception e) {
-				log.error("Problems killing subprocess " + subprocessid);
+			} catch (IOException | InterruptedException e) {
+				if (procWinUUID != null) 
+					log.error("Problems killing Windows process " + pid);
+				else
+					log.error("Problems killing subprocess " + subprocessid);
 				log.error(e);
 			}
-
 		}
-
 	}
 
 	protected String urlArrayToString(URL[] urls) {
